fix dark mode

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -917,11 +917,11 @@ html {
 }
 @media screen and (max-width: 1023px) {
   #arrow .arrow {
-    top: 8%;
+    top: 5%;
     left: 90%;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 346px) {
   #arrow .arrow {
     top: 12%;
     left: 90%;
@@ -1004,6 +1004,31 @@ html {
   background-color: rgb(100 157 141 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1012,6 +1037,36 @@ html {
 .dark .dark\:text-dark_white {
   --tw-text-opacity: 1;
   color: rgb(197 189 187 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-pri_color {
+  --tw-text-opacity: 1;
+  color: rgb(233 130 141 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-sec_color {
+  --tw-text-opacity: 1;
+  color: rgb(100 157 141 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-black {
+  --tw-text-opacity: 1;
+  color: rgb(58 66 69 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-slate-600 {
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow-4xl {
